# mrm_new

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  How to install and Run.txt  docker-compose.yml  start_services.bat  start_services.sh
.github/workflows/: deploy.yml
backend/: .dockerignore
backend/deep_agent/: Dockerfile  critique_deep_agent.py  docx_utils.py  main.py  models.py  postman_collection.json  pyproject.toml  research_deep_agent.py  review_deep_agent.py  tech_search_deep_agent.py  trigger_agent.ipynb
backend/docs/: document_stucture.docx  document_stucture.md  technical_document.md  usecase.md
backend/mcp_server/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  utils.py  websocket_server.py
backend/mcp_server/tools/: __init__.py  analyze_document_tool.py  ask_review_from_ai_agent.py  review_document_tool.py  select_dropdown_and_generate_chapter_content.py  web_search_tool.py
backend/mcp_server/tools/rag/faiss_db/: index.faiss  index.pkl
backend/reception_agent/: .dockerignore  Dockerfile  main.py  postman_collection.json  pyproject.toml
backend/reception_agent/agentic_application/: __init__.py  config.py  entrypoint.py  utils.py
backend/reception_agent/agentic_application/agents/: __init__.py  supervisor_agent.py
backend/reception_agent/agentic_application/prompts/: __init__.py  supervisor_prompt.py
frontend/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  styles.scss
(+27 files in other folders)
