[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.5",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.116.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "unstructured[pdf]>=0.20.2",
    "uvicorn>=0.35.0",
]
